--- a/.releaserc.json
+++ b/.releaserc.json
@@ -12,7 +12,7 @@
       "@semantic-release/github",
       {
         "assets": [
-          { "path": "*.tar.xz", "label": "Docker store distribution" }
+          { "path": "*.tar.xz" }
         ]
       }
     ]
